add color pickers, better ui

--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,27 @@
   margin: auto;
 }
 
-.anyButtonContainer__inputHolder {}
+.anyButtonContainer__inputHolder {
+  margin-top: 10px;
+}
 
 .anyButtonContainer__inputHolder>* {
   margin-bottom: 10px;
+}
+
+.anyButtonContainer__colorsHolder {
+  display: flex;
+  gap: 10px;
+}
+
+.anyButtonContainer__colorHolder {
+  display: flex;
+  flex-direction: column;
+}
+
+.anyButtonContainer__colorHolder__label {
+  margin: 0;
+  font-size: 14px;
 }
 
 .anyButtonContainer__input {
@@ -36,6 +53,17 @@
 
 .anyButtonContainer__input--text {
   background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-a-b" width="13" height="14" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 16v-5.5a2.5 2.5 0 0 1 5 0v5.5m0 -4h-5" /><line x1="12" y1="6" x2="12" y2="18" /><path d="M16 16v-8h3a2 2 0 0 1 0 4h-3m3 0a2 2 0 0 1 0 4h-3" /></svg>');
+}
+
+.anyButtonContainer__input--color {
+  margin: 0;
+  font-size: 14px;
+  cursor: pointer;
+  height: 40px;
+  width: 120px;
+  padding: 2px 4px;
+  border: 1px solid lightgray;
+  border-radius: 3px;
 }
 
 .anyButtonContainer__input[contentEditable=true][data-placeholder]::before {
