--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,8 @@
   padding: 0.5rem 1rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
-  border-radius: .25rem
+  border-radius: .25rem;
+  background: white;
 }
 
 .anyButtonContainer__registerButton {
@@ -142,7 +143,8 @@
   padding: 0.5rem 1rem;
   font-size: 0.875rem;
   line-height: 1.25rem;
-  border-radius: .25rem
+  border-radius: .25rem;
+  background: white;
 }
 
 .btn {
